tests/snapshots/tui_snapshots__action_menu.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ───────┌ ID0248 · actions ────────────────────────────────────────────┐─────────────────┐"
"│  ID     PROJECT │ o      Open project folder       reveal it in the file man…  │by_Remix_ID0248  │"
"│▸ ID0248 2026-08-│ t      Open terminal here        a new terminal window in …  │ideo: treatment  │"
"│  ID0247 2026-08-│ y      Copy path                 put the project's folder …  │booked           │"
"│  ID0246 2026-08-│ p      Show path                 print the full path in th…  │  projects       │"
"│  ID0245 2026-08-│ A      Add a tag                 pick one the library alre…  │28               │"
"│  ID0244 2026-08-│ Ctrl-t Remove tags               tick the tags to take off…  │                 │"
"│  ID0243 2026-08-│ Enter  Re-derive tags            recompute the template's …  │──────────────── │"
"│  ID0242 2026-08-│ N      New note                  write a note in your edit…  │                 │"
"│  ID0241 2026-08-│ Ctrl-n Quick note                type a note where you are…  │                 │"
"│  ID0240 2026-08-│ Enter  Add a todo                type one task onto this p…  │                 │"
"│  ID0239 2026-08-│ P      Add a phase               name a new phase for this…  │                 │"
"│  ID0238 2026-08-│ r      Rename folder             change the folder's name …  │                 │"
"│  ID0237 2026-08-│ m      Move to another base      no other base is mounted …  │                 │"
"│                 │ C      Copy to a folder          copy this project — or ev…  │                 │"
"│                 │ u      Unregister (keep files)   remove its PROJECT_INFO.m…  │                 │"
"│                 │ D      Delete folder permanently delete the project and ev…  │                 │"
"│                 │ M      Show metadata             the project's frontmatter…  │                 │"
"│                 │ J      Show notes                every note ever added to …  │                 │"
"│                 │                                                              │                 │"
"│                 │                                                              │                 │"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
" ↑↓ choose  Enter run  o open  t terminal  y copy path  Esc close  ? help  c commands               "
