tests/snapshots/tui_snapshots__activity_jobs_page.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
"◜ moving ID0248 · copying 12 of 34 files    → projects 12   archive not mounted    ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ music-video   ·   projects       │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ created 2026-08-28               │"
"│  ID0246 2026-┌ activity ──────────────────────────────────────────────────────────┐              │"
"│  ID0245 2026-│   messages   ▸ jobs     log   Tab turns the page · newest first    │───────────── │"
"│  ID0244 2026-│                                                                    │              │"
"│  ID0243 2026-│ ▸ 2026-09-25 16:03  running    move ID0248  copying 12 of 34 files │              │"
"│  ID0242 2026-│   2026-09-25 16:03  done       reconcile  Reconciled: 0 resumed, 1…│              │"
"│  ID0241 2026-│                                                                    │              │"
"│  ID0240 2026-│                                                                    │              │"
"│  ID0239 2026-│                                                                    │              │"
"│  ID0238 2026-│                                                                    │              │"
"│  ID0237 2026-│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
" ↑↓ scroll  Esc close  ? help  c commands                                                           "
