tests/snapshots/tui_snapshots__activity_log_page.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ A Fiverr music video: treatment  │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ approved, shoot booked           │"
"│  ID0246 2026-┌ activity ──────────────────────────────────────────────────────────┐rojects       │"
"│  ID0245 2026-│   messages     jobs   ▸ log   Tab turns the page · newest first    │              │"
"│  ID0244 2026-│                                                                    │              │"
"│  ID0243 2026-│ 2026-09-25T14:03:19.004Z WARN  - 4242 the moved copy could not be  │───────────── │"
"│  ID0242 2026-│ re-read                                                            │              │"
"│  ID0241 2026-│     second line of it                                              │              │"
"│  ID0240 2026-│ 2026-09-25T14:03:11.200Z INFO  - 4242 move ID0248 Lullaby to       │              │"
"│  ID0239 2026-│ /mnt/projects/b: scanned 41 entries                                │              │"
"│  ID0238 2026-│ 2026-09-25T14:03:11.123Z INFO  - 4242 move ID0248 Lullaby to       │              │"
"│  ID0237 2026-│ /mnt/projects/b: started                                           │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
" ↑↓ scroll  Esc close  ? help  c commands                                                           "
