tests/snapshots/tui_snapshots__apply_preview.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ A Fiverr music video: treatment  │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ approved, shoot booked           │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                scanning… ││ music-video   ·   projects       │"
"│  ID0245 20┌ apply a template · preview ──────────────────────────────────────────────┐           │"
"│  ID0244 20│ → /mnt/projects/Existing_Folder                                          │           │"
"│  ID0243 20│                                                                          │────────── │"
"│  ID0242 20│ create 00_Inbox                                                          │           │"
"│  ID0241 20│ skip   01_Working                                                        │           │"
"│  ID0240 20│ create BRIEF.md                                                          │           │"
"│  ID0239 20│                                                                          │           │"
"│  ID0238 20│ 2 to create   1 already there                                            │           │"
"│  ID0237 20│                                                                          │           │"
"│           │                                                                          │           │"
"│           │ Enter applies it   Esc back to the answers   ↑↓ scroll                   │           │"
"│           └──────────────────────────────────────────────────────────────────────────┘           │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
