tests/snapshots/tui_snapshots__attention_actions_80x24.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                     highest ID0248 "
" → projects 12   archive not mounted                           ⚠ 1 needs you  ! "
" ⌕ / to search                                                   12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────────────┐"
"│  ID     PROJECT                                              SIZE CREATED    │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248                 scanning… 2026-08-28 │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247        scanning… 2026-08-27 │"
"│ ┌ an old copy — what to do ────────────────────────────────────────────────┐ │"
"│ │ ⌕                                                                        │ │"
"│ │                                                                          │ │"
"│ │ Put it back as the project                                               │ │"
"│ │ Discard it                                                               │ │"
"│ │──────────────────────────────────────────────────────────────────────────│ │"
"│ │ An old copy with no record of its move, whose project fastf cannot find: │ │"
"│ │ it may be the only copy.                                                 │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"│  ID0237 2026-08-17_Live_Session_ID0237                  scanning… 2026-08-17 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
" ↑↓ move  Enter choose  Esc cancel  F1 help  Ctrl-p commands                    "
