tests/snapshots/tui_snapshots__base_menu.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 9   archive 3                                                          ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────────────────────────────────┐"
"│  ID     PROJECT                                          SIZE CREATED    BASE     TEMPLATE       │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248             scanning… 2026-08-28 projects music-video    █"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247    scanning… 2026-08-27 archive  general        █"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                 scanning… 2026-08-26 projects client-project █"
"│  ID0245 2026-08-25_Test_Run_ID0245                  scanning… 2026-08-25 projects music-video    █"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244           scanning… 2026-08-24 projects general        ║"
"│  ID0243 2026-08-┌ archive · actions ───────────────────────────────────────────┐  client-project ║"
"│  ID0242 2026-08-│ Space  Mark inactive          tick or untick this base — t…  │s music-video    ║"
"└─────────────────│ f      Show only this base    the list shows this base alo…  │─────────────────┘"
"┌ ID0248 ─────────│ B      Show active bases only every base is active — untic…  │─────────────────┐"
"│ 2026-08-28_Lulla│ Enter  Add or remove bases    the list of bases in the set…  │                 │"
"│ music-video   · │                                                              │                 │"
"│ scanning…       │                                                              │                 │"
"│ ── tags ────────└──────────────────────────────────────────────────────────────┘──────────────── │"
"│ ● draft                                                                                          │"
"│ · add a tag                                                                                      │"
"│ reading…                                                                                         │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
" ↑↓ choose  Enter run  Space mark inactive  f only this  B active only  Esc close  ? help           "
