tests/snapshots/tui_snapshots__bases_panel.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 9   archive 3                                                          ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────────────────────────────────┐"
"│  ID     PROJECT                                          SIZE CREATED    BASE     TEMPLATE       │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248             scanning… 2026-08-28 projects music-video    █"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247    scanning… 2026-08-27 archive  general        █"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                 scanning… 2026-08-26 projects client-project █"
"│  ID0245 2026-08-25_Test_Run_ID0245                  scanning… 2026-08-25 projects music-video    █"
"│  ID0244┌ bases ─────────────────────────────────────────────────────────────────────────┐        ║"
"│  ID0243│ showing every base                                                             │project ║"
"│  ID0242│                                                                                │ideo    ║"
"└────────│ ▸ [x] → projects  9   /mnt/projects                                            │────────┘"
"┌ ID0248 │   [x]   archive   3   /media/usb/archive                                       │────────┐"
"│ 2026-08│                                                                                │        │"
"│ music-v│ The default base: new projects go here, so it is always in the list.           │        │"
"│ scannin│ ↑↓ choose   Space mark inactive   Esc close   Enter menu   B active only       │        │"
"│ ── tags└────────────────────────────────────────────────────────────────────────────────┘─────── │"
"│ ● draft                                                                                          │"
"│ · add a tag                                                                                      │"
"│ reading…                                                                                         │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
