tests/snapshots/tui_snapshots__bases_panel_unticked.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 9   1 inactive                                                         ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                          9/9 · newest · active bases "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ music-video   ·   projects       │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                scanning… ││ created 2026-08-28               │"
"│  ID0245 2026-08-25_Test_Run_ID0245                 scanning… ││ scanning…                        │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244          scanning… ││ ── tags ──────────────────────── │"
"│  ID0242┌ bases ─────────────────────────────────────────────────────────────────────────┐        │"
"│  ID0241│ showing the active bases   1 inactive left out                                 │        │"
"│  ID0240│                                                                                │        │"
"│  ID0238│   [x] → projects  9   /mnt/projects                                            │        │"
"│  ID0237│ ▸ [ ]   archive   3   /media/usb/archive                                       │        │"
"│        │                                                                                │        │"
"│        │ Inactive: out of the list; B shows every base, f this one alone.               │        │"
"│        │ ↑↓ choose   Space mark active   Enter menu   Esc close   B every base          │        │"
"│        └────────────────────────────────────────────────────────────────────────────────┘        │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
" archive is inactive — the list shows the active bases now, B shows every base                      "
"                                                                                                    "
