tests/snapshots/tui_snapshots__batch_delete_confirm.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                 12/12 · newest · 3 ✓ "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0245 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-25_Test_Run_ID0245       │"
"│✓ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ (no description)                 │"
"│✓ ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ music-video   ·   projects       │"
"│✓ ID0246 2026-08-26_Old_Shoot_ID0246                scanning… ││ created 2026-08-25               │"
"│▸ ID0245 2026-08-25_Test_Run_ID0245                 scanning… ││ scanning…                        │"
"│  ID0244 2026-08-2┌ delete ────────────────────────────────────────────────────┐───────────────── │"
"│  ID0243 2026-08-2│ Type delete to confirm — these 3 projects and everything   │                  │"
"│  ID0242 2026-08-2│ inside them will be gone: 2026-08-28_Lullaby_Remix_ID0248, │                  │"
"│  ID0241 2026-08-2│ 2026-08-27_Client_Onboarding_Acme_ID0247,                  │                  │"
"│  ID0240 2026-08-2│ 2026-08-26_Old_Shoot_ID0246                                │                  │"
"│  ID0239 2026-08-1│                                                            │                  │"
"│  ID0238 2026-08-1│                                                            │                  │"
"│  ID0237 2026-08-1│                                                            │                  │"
"│                  │                                                            │                  │"
"│                  └────────────────────────────────────────────────────────────┘                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
" 3 marked · a verb acts on them instead of the row under the cursor                                 "
" Enter confirm  Esc cancel  F1 help  Ctrl-p commands                                                "
